# memento

./: .gitignore  ARCHITECTURE.md  COMPARISON.md  LICENSE  Makefile  README.md  mcp_server.py  memento  memento_cli.py  memento_sync.py  pyproject.toml  sync  upgrade.py
skills/memento-integration/: SKILL.md
